tests/baselines/reference/jsxParsingError1.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(11,30): error TS2695: Left side of comma operator is unused and has no side effects.
file.tsx(11,30): error TS18007: JSX expressions may not use the comma operator. Did you mean to write an array?


==== file.tsx (3 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
    // This should be a parse error
    const class1 = "foo";
    const class2 = "bar";
    const elem = <div className={class1, class2}/>;
                                 ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                 ~~~~~~~~~~~~~~
!!! error TS18007: JSX expressions may not use the comma operator. Did you mean to write an array?
    